# fitness-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: bot.py  config.py  logger.py  longpolling.py  main.py  webhook.py
src/api/routers/: __init__.py  general.py  start.py  stats.py  test.py
src/db/: session.py
src/middleware/: general.py  main.py  user.py
src/models/: stats.py  user.py
src/services/: stats.py  user.py
src/utils/: time.py
static/messages/: messages.json
tools/message_loader_tools/: pyproject.toml
tools/message_loader_tools/src/message_loader_tools/: main.py
