[project]
name = "message-loader-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Steven Rudenko", email = "steven.gucum@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "rich>=14.2.0",
    "typer>=0.19.2",
]

[project.scripts]
mlt = "message_loader_tools:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
